# parallelProgramming

lab1/: CMakeLists.txt  README.md  auto  autoForPar  autoForSeq  compile  main.c
lab1/delta_ms_images/: delta_ms_for_clang_no_vectorization.csv  delta_ms_for_clang_with_vectorization.csv  delta_ms_for_par1.csv  delta_ms_for_par2.csv  delta_ms_for_par4.csv  delta_ms_for_par8.csv  delta_ms_for_par_clang.csv  delta_ms_for_par_gcc2.csv  delta_ms_for_par_gcc4.csv  delta_ms_for_par_gcc8.csv  delta_ms_for_par_icc.csv  delta_ms_for_seq.csv  delta_ms_for_seq_clang.csv  graph.R
lab2/: CMakeLists.txt  README.md  autoTest  compile  lab2_clang  lab2_intel  main.c  main_par_icc.c
lab2/delta_ms_images/: delta_ms_clang_1.csv  delta_ms_for_par_gcc1.csv  delta_ms_icc_par.csv  delta_ms_intel_1.csv  graph.R
lab3/: CMakeLists.txt  README.md  autoTest  compile  main_dynamic.c  main_guided.c  main_static.c
lab3/delta_ms_images/: 1thread_dynamic_125chunk.csv  1thread_dynamic_1chunk.csv  1thread_dynamic_25chunk.csv  1thread_dynamic_3125chunk.csv  1thread_dynamic_5chunk.csv  1thread_dynamic_625chunk.csv  1thread_guided_125chunk.csv  1thread_guided_1chunk.csv  1thread_guided_25chunk.csv  1thread_guided_3125chunk.csv  1thread_guided_5chunk.csv  1thread_guided_625chunk.csv  1thread_static_125chunk.csv  1thread_static_1chunk.csv  1thread_static_25chunk.csv  1thread_static_3125chunk.csv  1thread_static_5chunk.csv  1thread_static_625chunk.csv  2thread_dynamic_125chunk.csv  2thread_dynamic_1chunk.csv  2thread_dynamic_25chunk.csv  (+52 more)
lab4/: CMakeLists.txt  autoTest  compile  main_guided.c
(+5 files in other folders)
